--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,18 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
+  riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
+  build_runner: ^2.4.13
+  custom_lint: ^0.7.0
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^4.0.0
+  riverpod_generator: ^2.6.2
+  riverpod_lint: ^2.6.2
 
 flutter:
   uses-material-design: true
